@@ -6,10 +6,6 @@
 	<string>809 193 356 240 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
 	<string>349.0</string>
-	<key>IBOpenObjects</key>
-	<array>
-		<integer>32</integer>
-	</array>
 	<key>IBSystem Version</key>
 	<string>7D24</string>
 </dict>
